# StockSImulation

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  DataReader.cpp  DataReader.h  EarningsSimulator.h  Main.cpp  PriceSimulator.h  Simulator.cpp  Simulator.h  Stock.cpp  Stock.h  StockData.cpp  StockData.h  StockScreen.cpp  StockScreen.h
